--- a/location/location.html
+++ b/location/location.html
@@ -130,6 +130,12 @@ var marker = new kakao.maps.Marker({
     position: markerPosition
 });
 
+// 인포윈도우로 장소에 대한 설명을 표시합니다
+        var infowindow = new kakao.maps.InfoWindow({
+            content: '<div style="width:150px;text-align:center;padding:6px 0;">우리회사</div>'
+        });
+        infowindow.open(map, marker);
+
 // 마커가 지도 위에 표시되도록 설정합니다
 marker.setMap(map);
 
