--- a/location/location.html
+++ b/location/location.html
@@ -132,7 +132,7 @@ var marker = new kakao.maps.Marker({
 
 // 인포윈도우로 장소에 대한 설명을 표시합니다
         var infowindow = new kakao.maps.InfoWindow({
-            content: '<div style="width:150px;text-align:center;padding:6px 0;">우리회사</div>'
+            content: '<div style="width:150px;text-align:center;padding:6px 0;">그래나다</div>'
         });
         infowindow.open(map, marker);
 
